# MolSieve

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  api_tests.org  build-lammps.sh  build-petsc-slepc.sh  compose.yaml  copyright_header.txt  dockerfile  launch.sh  neo4j_setup_part1.sh  neo4j_setup_part2.sh  pyproject.toml  readme.md  requirements.txt
api/: __init__.py  app.py  config.py  connectionmanager.py  constants.py  graphdriver.py  main.py  memcachedclient.py  models.py  setup.cfg  trajectory.py  utils.py
api/background_worker/: celery.py  celeryconfig.py
api/routers/: calculate.py  data.py  scripts.py  worker.py
api/worker/: celery_app.py  celeryconfig.py
api_tests/: test_calculate.py  test_data.py  test_main.py  test_trajectory.py
disabled_scripts/: eccentricity.py  wignerseitz.py
frontend/: .eslintrc.json  .prettierrc.json  dockerfile  jsconfig.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: AddFilterModal.js  App.css  App.js  CheckboxTable.js  FilterComponent.js  Filters.js  LoadRunModal.js  Modal.css  MultiplePathSelectionModal.js  Scatterplot.js  SelectionModal.js  TrajectoryChart.js  XYPlotModal.js  api.js  d3_rendering.js  index.js  myutils.js  setupProxy.js  slider-components.js  store.js  trajectory.js  vis_control.js
frontend/src/api/: Filter.js  FilterBuilder.jsx  GlobalChartScale.js  ajax.js  chunk.js  chunks.js  colormanager.js  colorschemes.jsx  constants.js  filters.js  globalChunks.js  globalStates.js  listenerMiddleware.js  myutils.js  myutils.jsx  random.js  simplifiedtrajectory.jsx  simulation.js  state.js  states.js  stats.js  timestep.js  trajectories.js  trajectories.jsx  trajectory.js  websocketmanager.js  websocketmethods.js  websocketmiddleware.js
frontend/src/components/: AjaxMenu.jsx  AjaxSelect.js  AjaxVideo.js  AjaxVideo.jsx  ButtonWithOpenMenu.jsx  ChartBox.jsx  CheckboxTable.js  CheckboxTable.jsx  ComparisonView.jsx  ControlDrawer.jsx  ExpandableView.jsx  FilterComponent.js  ImageViewer.jsx  LoadingBox.jsx  LoadingSnackbar.jsx  ProgressBox.jsx  RemovableBox.jsx  ScatterControl.jsx  ScatterGraph.jsx  ScatterGrid.jsx  SingleStateViewer.jsx  (+11 more)
neomd/: .flake8  README.md  patch_lammpslib.txt  pyproject.toml
neomd/docs/: makedocs.sh
neomd/docs/source/: conf.py  index.rst  modules.rst  neomd.calculator.rst  neomd.converter.rst  neomd.graphs.bipartite.rst  neomd.graphs.graphutils.rst  neomd.graphs.rst  neomd.graphs.stategraph.rst  neomd.metadata.rst  neomd.queries.core.rst  neomd.queries.neo4j_types.rst  neomd.queries.query.rst  neomd.queries.querybuilder.rst  neomd.queries.rst  neomd.queries.statement.rst  neomd.rst  neomd.trajectory.rst  neomd.utils.rst  neomd.visualizations.rst
neomd/examples/: NeoMD_Examples.ipynb
neomd/neomd/: calculator.py  constants.py  converter.py  extraction.py  metadata.py  trajectory.py  utils.py  visualizations.py
neomd/neomd/graphs/: __init__.py  bipartite.py  graphutils.py  stategraph.py
neomd/neomd/queries/: __init__.py  core.py  neo4j_types.py  query.py  querybuilder.py  statement.py
neomd/src/neomd/: constants.py  trajectory.py  utils.py
neomd/src/neomd/graphs/: graphutils.py
neomd/src/neomd/queries/: core.py  query.py
neomd/tests/: conftest.py  test_calculator.py  test_converter.py  test_utils.py
neomd/tests/graphs/: test_bipartite.py  test_graphutils.py  test_stategraph.py
neomd/tests/queries/: test_core.py  test_querybuilder.py  test_statement.py
scripts/: acklandjones.py  commonneighboranalysis.py  eccentricity.py  polyhedraltemplatematching.py  wignerseitz.py
vis/: __init__.py  config.py  epoch.py  trajectory.py  utils.py
vis/templates/: home.html
vis/testing/: nano_pt_700K_optimal_pcca.json  nano_pt_700K_sequence.json  nano_pt_energies.json  nano_pt_optimal_pcca.json  nano_pt_sequence.json
vis_scripts/: AJ.py  CNA.py  default.py  ovito-graphs.py  wignerseitz.py
(+71 files in other folders)
