[tool.poetry]
name = "NeoMDWeb"
version = "0.1.0"
description = ""
authors = ["Rostyslav Hnatyshyn <rostyslav.hnatyshyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.75.2"
ovito = "^3.7.4"
neo4j = "^4.4.3"
sse-starlette = "^0.10.3"
celery = {extras = ["redis"], version = "^5.2.6"}
pygpcca = "^1.0.3"
scipy = "^1.8.0"
numpy = "^1.22.3"
pydantic-requests = "^0.1.4"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
neomd = {path = "./neomd/", develop = true}
opencv-python = "^4.5.5"
requests = "^2.27.1"
lammps = {path = "./lammps/python"}

[tool.poetry.dev-dependencies]
pyright = "^1.1.244"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
