[tool.poetry]
name = "neomd"
version = "0.1.0"
description = ""
authors = ["Rostyslav Hnatyshyn <rostyslav.hnatyshyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ase = "^3.22.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
ovito = "^3.7.4"
neo4j = "^5.13.0"
typeguard = "^2.13.3"
opencv-python = "^4.5.5"
networkx = "^3.1"
netrd = "^0.3.0"
fitsnap3 = "^3.1.0.4"
nglview = "^3.1.4"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
ipython = "^8.3.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["neomd"]
exclude = [".venv", "tests/data", "examples"]
venvPath = "."
venv = ".venv"

executionEnviornments = [{ root = "neomd" }]
