[project]
name = "neomd"
version = "0.1.0"
description = ""
authors = [{ name = "Rostyslav Hnatyshyn", email = "rostyslav.hnatyshyn@gmail.com" }]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ase>=3.22.1,<4",
    "pandas>=1.4.2,<2",
    "numpy>=1.22.3,<2",
    "ovito>=3.7.4,<4",
    "neo4j>=5.13.0,<6",
    "typeguard>=2.13.3,<3",
    "opencv-python>=4.5.5,<5",
    "networkx>=3.1,<4",
    "netrd>=0.3.0,<0.4",
    "fitsnap3>=3.1.0.4,<4",
    "nglview>=3.1.4,<4",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8",
    "ipython>=8.3.0,<9",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pyright]
include = ["neomd"]
exclude = [".venv", "tests/data", "examples"]
venvPath = "."
venv = ".venv"

executionEnviornments = [{ root = "neomd" }]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
